🕴🌹 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Hello!</title>
+    <title>Game Time!</title>
     
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css">
@@ -13,12 +13,18 @@
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
   </head>  
+
   <body>
+
     <h1>Visual and Memory Game</h1>
     
     <p>
     Welcome to the game! repeat back the pattern played to win!
     </p>
+
+
+    <p id="try">Tries left : 3 </p>
+  
 
     <button id="startBtn" onclick="startGame()">Start</button>
     <button id="stopBtn" class="hidden" onclick="stopGame()">Stop</button>
