🍽🤖 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
 
     <p id="try">Tries left : 3 </p>
+    
   
 
     <button id="startBtn" onclick="startGame()">Start</button>
@@ -35,6 +36,11 @@
         <button id="button3" onmousedown="startTone(3)" onmouseup="stopTone()" onclick="guess(3)"></button>
         <button id="button4" onmousedown="startTone(4)" onmouseup="stopTone()" onclick="guess(4)"></button>
     </div>
-    
+
+    <div>
+      <img src="images/lose.png" alt="" id="losepic" class="hidden">
+      <img src="images/win.png" alt="" id="winpic" class="hidden">
+    </div>
+
   </body>
 </html>
